<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hello</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="myk@isp.co.jp">myk</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>dotnet_cmake_module</buildtool_depend>
  <buildtool_depend>rosidl_generator_cs</buildtool_depend>
  <buildtool_export_depend>rosidl_cmake</buildtool_export_depend>

  <build_depend>hello_interfaces</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <build_depend>ros2cs_core</build_depend>
  <build_depend>ros2cs_common</build_depend>

  <exec_depend>hello_interfaces</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>ros2cs_core</exec_depend>
  <exec_depend>ros2cs_common</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
