<?xml version="1.0"?>
<package format="2">
  <name>rcldotnet_examples</name>
  <version>1.0.0</version>
  <description>Package containing examples of how to use the rcldotnet API.</description>
  <maintainer email="adam.dabrowski@robotec.ai">Adam Dabrowski</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>dotnet_cmake_module</buildtool_depend>
  <buildtool_depend>rosidl_generator_cs</buildtool_depend>
  <buildtool_export_depend>rosidl_cmake</buildtool_export_depend>

  <build_depend>example_interfaces</build_depend>
  <build_depend>rcldotnet</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2_msgs</build_depend>

  <exec_depend>example_interfaces</exec_depend>
  <exec_depend>rcldotnet</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
