<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ros2cs_common</name>
  <version>2.0.0</version>
  <description>Common interfaces and utility classes for ros2cs</description>
  <maintainer email="adam.dabrowski@robotec.ai">Adam Dabrowski</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_export_assemblies</buildtool_depend>
  <buildtool_depend>dotnet_cmake_module</buildtool_depend>

  <buildtool_export_depend>ament_cmake</buildtool_export_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>rosidl_cmake</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
